[project]
name = "sec-edgar-mcp"
version = "1.0.0"
description = "SEC EDGAR Financial Intelligence MCP Server — real-time access to public company filings, insider trades, and financial statements"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
sec-edgar-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
